# V-Nexus

./: .gitignore  LICENSE  PRIVACY_POLICY.md  README.md  TASKS.md  TERMS_OF_USE.md  build_log.txt  builder_log.txt  index.html  package-lock.json  package.json  pubspec.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
_backup_tun_debug/: TEST-INSTRUCTIONS.md  TUN2SOCKS-TEST.md  V2RAY-TUN-TEST.md  WiFi)  configure-tun.bat  init_tun_mode.bat  temp_homeview_part1.txt  test-singbox-tun.json  test-v2ray-tun.json  test-xray-socks.json
_backup_v3_pre_polish/src-tauri/: .gitignore  2  Cargo.toml  build.rs  tauri.conf.json
_backup_v3_pre_polish/src-tauri/capabilities/: default.json
_backup_v3_pre_polish/src-tauri/icons/: icon.icns
_backup_v3_pre_polish/src-tauri/resources/xray/: xray_no_window.vbs
_backup_v3_pre_polish/src-tauri/src/: config.rs  lib.rs  proxy.rs  tray.rs  tun.rs  utils.rs  xray.rs
_debug_v3/: singapore.json  tun_debug.rs  tun_manual.rs  tun_prototype_success.md  tun_sg.rs
android/app/: build.gradle.kts
electron/: auto-updater.ts  core-manager.ts  declarations.d.ts  killswitch.ts  main.ts  preload.ts  system-proxy.ts  traffic-monitor.ts  tun_manager.ts  xray-config-generator.ts
lib/: main.dart  native_backend.dart
linux/: CMakeLists.txt
native_backend/: CMakeLists.txt
native_backend/include/: backend.h
native_backend/src/: backend.cpp
scripts/: download-xray.ps1  fix_nsis_icons.ps1
src/: App.tsx  main.tsx  renderer.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.pub
web/: index.html
windows/: CMakeLists.txt
(+97 files in other folders)
